# qbjs-docker

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  action.yml  bootstrap.cmd  bootstrap.ps1  bootstrap.sh  docker-compose.yml  install.ps1  install.sh
.github/workflows/: bootstrap-check.yml  build-example.yml  docker-build.yml  reusable-build.yml  test.yml
examples/: Dockerfile
templates/: index.auto.html  index.play.html  manifest.json  service-worker.js
templates/electron/: electron-builder.yml  main.js  package.json
templates/nwjs/: package.json
templates/tauri/: README.md  package.json
templates/tauri/src-tauri/: Cargo.toml  tauri.conf.json
templates/tauri/src-tauri/icons/: .gitkeep
templates/tauri/src-tauri/src/: main.rs
workspace/: bubble-universe.bas  graphics-demo.bas  hello.bas
